<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SearchCityFragment">

    <LinearLayout
            android:id="@+id/lnrInputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            >
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_city"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_scrollFlags="scroll|enterAlways"

                >
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:drawableEnd="@drawable/ic_search_grey_24dp"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,LabelFor"
                    android:id="@+id/etCity"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:text="@string/search"
                android:id="@+id/btnCitySubmit"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                app:icon="@drawable/ic_search_grey_24dp"
                app:iconGravity="textStart"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCitySearchResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/lnrInputCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            tools:listitem="@layout/city_search_item"
            />
    <TextView
            android:id="@+id/tvrvCitySearchResultsLegend"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lnrInputCity"
            app:layout_constraintBottom_toTopOf="@id/rvCitySearchResults"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    <ImageView
            android:id="@+id/imgNoCityFound"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:tint="@color/colorGrey"
            app:srcCompat="@drawable/ic_map_perspective_with_a_placeholder_on_it"
            app:layout_constraintTop_toBottomOf="@id/lnrInputCity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>